<resources>
    <string name="app_name">RitterFlix</string>
    <string name="app_name_splash">RITTERFLIX</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_title">Preencha os dados abaixo para fazer login:</string>
    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="login">Login</string>
    <string name="releases">Lançamentos</string>
    <string name="know_more">Saiba mais</string>
    <string name="invalid_credentials">Credenciais inválidas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_account">ABRIR CONTA</string>
    <string name="popular_movies">Populares</string>
    <string name="save_data">Salvar dados</string>
    <string name="destaques">Destaques</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="signin_title">Preencha os dados abaixo para criar uma conta:</string>
    <string name="share">Compartilhar</string>
</resources>
