<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".ui.login.LoginActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:title="@string/app_name"
        app:titleTextColor="@android:color/white"
        app:layout_scrollFlags="scroll|enterAlways"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/title_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_margin="16dp"
        android:text="@string/login_title"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_outlined_edit_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_text"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="140dp"
        android:layout_marginRight="16dp"
        android:hint="@string/email"
        android:textColorHint="@color/colorSilverChalice"
        app:boxStrokeColor="@color/colorSilverChalice"
        app:boxStrokeWidth="2dp"
        app:hintTextColor="@color/colorSilverChalice"
        app:placeholderText="@string/email"
        app:placeholderTextColor="@color/colorSilverChalice">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorSilverChalice"
            android:textCursorDrawable="@null" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_outlined_edit_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_outlined_edit_text"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="44dp"
        android:layout_marginRight="16dp"
        android:hint="@string/password"
        android:textColorHint="@color/colorSilverChalice"
        app:boxStrokeColor="@color/colorSilverChalice"
        app:boxStrokeWidth="2dp"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/colorSilverChalice"
        app:hintTextColor="@color/colorSilverChalice"
        app:placeholderText="@string/password"
        app:placeholderTextColor="@color/colorSilverChalice">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/colorSilverChalice"
            android:textCursorDrawable="@null" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/ll_switch"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_below="@id/password_outlined_edit_text">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_save_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/SwitchTheme" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_data"
            android:layout_marginLeft="8dp"
            android:textColor="@color/colorSilverChalice"
            android:textSize="16sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/ll_switch">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/open_account_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:layout_weight="1"
            android:paddingBottom="16dp"
            android:text="@string/open_account"
            app:cornerRadius="28dp"
            android:layout_marginEnd="16dp"
            app:strokeColor="@color/colorPrimary"
            app:strokeWidth="2dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:paddingBottom="16dp"
            android:text="@string/login"
            app:cornerRadius="28dp" />
    </LinearLayout>
</RelativeLayout>